--- a/angular/prueba/src/app/app.component.html
+++ b/angular/prueba/src/app/app.component.html
@@ -18,5 +18,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<videojuego></videojuego>
 <router-outlet></router-outlet>
