--- a/angular/prueba/src/app/videojuego/videojuego.component.html
+++ b/angular/prueba/src/app/videojuego/videojuego.component.html
@@ -1,8 +1,9 @@
 <!-- Uso de las propiedades por interpolacion (Binding por interpolacion) -->
 <h2> {{ titulo }}</h2> 
 <p>{{ listado }}</p>
-<ul>
-<li>GTA</li>
-<li>Prince of Persia</li>
-<li>Mario</li>
-</ul>
+    <ul>
+        <li>GTA</li>
+        <li>Prince of Persia</li>
+        <li>Mario</li>
+    </ul>
+<button (click)="cambiarTitulo()">Cambiar Título</button>
