--- a/angular/prueba/src/app/zapatillas/zapatillas.component.html
+++ b/angular/prueba/src/app/zapatillas/zapatillas.component.html
@@ -1,6 +1,7 @@
 <h2>{{ titulo }}</h2>
 <ul>
-    <li>Nike</li>
-    <li>Adidas</li>
-    <li>Puma</li>
+    <li *ngFor="let deportiva of zapatillas">
+        {{deportiva.nombre}} -  <strong>{{deportiva.precio}}</strong>
+
+    </li>
 </ul>
