angular ngstyle con ternario

--- a/angular/prueba/src/app/app.component.html
+++ b/angular/prueba/src/app/app.component.html
@@ -24,7 +24,7 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-    <button (click)="ocultarVideojuegos(false)" *ngIf="mostrar_videojuegos">Ocultar Videojuegos</button>
+    <!-- <button (click)="ocultarVideojuegos(false)" *ngIf="mostrar_videojuegos">Ocultar Videojuegos</button>
     <button (click)="ocultarVideojuegos(true)" *ngIf="!mostrar_videojuegos">Visualizar Videojuegos</button>
 
     <videojuego *ngIf="mostrar_videojuegos"></videojuego>
@@ -32,7 +32,7 @@
         <dado></dado>
         <dado></dado>
         <dado></dado>
-    </div>
+    </div> -->
 
     <button (click)="ocultarZapatillas(false)" *ngIf="mostrarZapatillas">Ocultar Zapatillas</button>
     <button (click)="ocultarZapatillas(true)" *ngIf="!mostrarZapatillas">Visualizar Zapatillas</button>
