ngSwitch y ngModel formulario

--- a/angular/prueba/src/app/app.component.html
+++ b/angular/prueba/src/app/app.component.html
@@ -34,9 +34,10 @@
         <dado></dado>
     </div> -->
 
-    <button (click)="ocultarZapatillas(false)" *ngIf="mostrarZapatillas">Ocultar Zapatillas</button>
-    <button (click)="ocultarZapatillas(true)" *ngIf="!mostrarZapatillas">Visualizar Zapatillas</button>
+    <!-- <button (click)="ocultarZapatillas(false)" *ngIf="mostrarZapatillas">Ocultar Zapatillas</button>
+    <button (click)="ocultarZapatillas(true)" *ngIf="!mostrarZapatillas">Visualizar Zapatillas</button> -->
 
-    <zapatillas *ngIf="mostrarZapatillas"></zapatillas>
+    <!-- <zapatillas *ngIf="mostrarZapatillas"></zapatillas> -->
+    <nombre></nombre>
 </div>
 <router-outlet></router-outlet>
