--- a/angular/prueba/src/app/zapatillas/zapatillas.component.html
+++ b/angular/prueba/src/app/zapatillas/zapatillas.component.html
@@ -1,9 +1,12 @@
 <h2>{{ titulo }}</h2>
 
 <p>Comprar zapatillas de las mejores marcas</p>
+
+<input type="text" [(ngModel)] = "textoMarca" />
+<input type="button" (click)="aniadirMarca()" value="Añadir Marca"/>
 <ul>
-    <li *ngFor="let marca of marcas">
-        {{ marca }}
+    <li *ngFor="let marca of marcas; let indice = index">
+        {{ indice + '    ' + marca }}
     </li>
 </ul>
 
