--- a/angular/prueba/src/app/zapatillas/zapatillas.component.html
+++ b/angular/prueba/src/app/zapatillas/zapatillas.component.html
@@ -1,7 +1,7 @@
 <h2>{{ titulo }}</h2>
 
 <p>Comprar zapatillas de las mejores marcas</p>
-
+<p>Añadir marca: </p>
 <input type="text" [(ngModel)] = "textoMarca" />
 <input type="button" (click)="aniadirMarca()" value="Añadir Marca"/>
 <ul>
