crear zapatillas, componente videojuego modificado

--- a/angular/prueba/src/app/app.component.html
+++ b/angular/prueba/src/app/app.component.html
@@ -39,5 +39,6 @@
 
     <zapatillas *ngIf="mostrarZapatillas"></zapatillas>
     <nombre></nombre>
+    <videojuego></videojuego>
 </div>
 <router-outlet></router-outlet>
