--- a/angular/prueba/src/app/app.component.html
+++ b/angular/prueba/src/app/app.component.html
@@ -40,5 +40,6 @@
     <zapatillas *ngIf="mostrarZapatillas"></zapatillas>
     <nombre></nombre>
     <videojuego></videojuego>
+    <pipes></pipes>
 </div>
 <router-outlet></router-outlet>
