--- a/angular/prueba/src/app/app.component.html
+++ b/angular/prueba/src/app/app.component.html
@@ -48,6 +48,7 @@
     <a [routerLink]="['zapatillas']">Zapatillas</a> &nbsp;
     <a [routerLink]="['videojuego']">Videojuegos</a> &nbsp;
     <a [routerLink]="['nombre']">Nombre</a> &nbsp;
+    <a [routerLink]="['datosexternos']">Datos externos</a> &nbsp;
     <a [routerLink]="['pipes']">Datos</a> &nbsp;
     <a [routerLink]="['dado']">Dado</a> &nbsp;
 </nav>
